--- a/GesThor/GesThor.csproj
+++ b/GesThor/GesThor.csproj
@@ -61,6 +61,12 @@
     <Compile Include="Operacion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SolResRec.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SolResRec.Designer.cs">
+      <DependentUpon>SolResRec.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AddModEquipo.resx">
       <DependentUpon>AddModEquipo.cs</DependentUpon>
     </EmbeddedResource>
@@ -76,6 +82,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SolResRec.resx">
+      <DependentUpon>SolResRec.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
