--- a/GesThor - copia/GesThor.csproj
+++ b/GesThor - copia/GesThor.csproj
@@ -46,66 +46,64 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddModEquipo.cs">
+    <Compile Include="Forms\AddModEquipo.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddModEquipo.Designer.cs">
+    <Compile Include="Forms\AddModEquipo.Designer.cs">
       <DependentUpon>AddModEquipo.cs</DependentUpon>
     </Compile>
-    <Compile Include="Devolucion.cs">
+    <Compile Include="Forms\Devolucion.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Devolucion.Designer.cs">
+    <Compile Include="Forms\Devolucion.Designer.cs">
       <DependentUpon>Devolucion.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="Forms\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\AddModEquipo.Designer.cs" />
-    <Compile Include="Historial.cs">
+    <Compile Include="Forms\Historial.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Historial.Designer.cs">
+    <Compile Include="Forms\Historial.Designer.cs">
       <DependentUpon>Historial.cs</DependentUpon>
     </Compile>
-    <Compile Include="MenuUsuarios.cs">
+    <Compile Include="Forms\MenuUsuarios.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MenuUsuarios.Designer.cs">
+    <Compile Include="Forms\MenuUsuarios.Designer.cs">
       <DependentUpon>MenuUsuarios.cs</DependentUpon>
     </Compile>
     <Compile Include="Operacion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Registro.cs">
+    <Compile Include="Forms\Registro.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Registro.Designer.cs">
+    <Compile Include="Forms\Registro.Designer.cs">
       <DependentUpon>Registro.cs</DependentUpon>
     </Compile>
-    <Compile Include="SolResRec.cs">
+    <Compile Include="Forms\SolResRec.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SolResRec.Designer.cs">
+    <Compile Include="Forms\SolResRec.Designer.cs">
       <DependentUpon>SolResRec.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="AddModEquipo.resx">
+    <EmbeddedResource Include="Forms\AddModEquipo.resx">
       <DependentUpon>AddModEquipo.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Devolucion.resx">
+    <EmbeddedResource Include="Forms\Devolucion.resx">
       <DependentUpon>Devolucion.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
+    <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\AddModEquipo.resx" />
-    <EmbeddedResource Include="Historial.resx">
+    <EmbeddedResource Include="Forms\Historial.resx">
       <DependentUpon>Historial.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MenuUsuarios.resx">
+    <EmbeddedResource Include="Forms\MenuUsuarios.resx">
       <DependentUpon>MenuUsuarios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -117,10 +115,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Registro.resx">
+    <EmbeddedResource Include="Forms\Registro.resx">
       <DependentUpon>Registro.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="SolResRec.resx">
+    <EmbeddedResource Include="Forms\SolResRec.resx">
       <DependentUpon>SolResRec.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
