--- a/GesThor/GesThor.csproj
+++ b/GesThor/GesThor.csproj
@@ -76,7 +76,7 @@
     <Compile Include="Forms\MenuUsuarios.Designer.cs">
       <DependentUpon>MenuUsuarios.cs</DependentUpon>
     </Compile>
-    <Compile Include="Operacion.cs" />
+    <Compile Include="Utils\Operacion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Forms\Registro.cs">
