--- a/GesThor/App.config
+++ b/GesThor/App.config
@@ -3,4 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+
+    <connectionStrings>
+        <add name="MiConexion"
+             connectionString="Data Source=DESKTOP-TE3EHHL\SQLEXPRESS;Initial Catalog=GesThor;Integrated Security=True;"
+             providerName="System.Data.SqlClient"/>
+    </connectionStrings>
 </configuration>
